<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutorial expandListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="Save">Save</string>
    <string name="onClickSave">onClickSave</string>

    <color name="ExpandChildBackground">#FFAFABAB</color>
    <color name="ExpandGroupBackground">#FF7C7C7C</color>
    <color name="color_black">#000</color>

    <string name="title_activity_family">FamilyActivity</string>
    <string name="title_activity_child">ChildActivity</string>

    <string name="child_gender">Gender</string>
    
	<string-array name="array_gender">
	<item>Boy</item>
	<item>Girl</item>
	</string-array>
</resources>